--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch html",
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "file:///Users/min/Desktop/SchoolBell/popup.html",
-            "webRoot": "${workspaceFolder}"
+            "file": "${file}"
         }
     ]
 }
