--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "name": "Launch html",
             "type": "chrome",
             "request": "launch",
-            "file": "${file}"
+            "name": "Launch Chrome against localhost",
+            "url": "file:///Users/min/Desktop/SchoolBell/popup.html",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
