--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
     "manifest_version": 2, 
     "background": { "scripts": ["js/background.js"], "persistent": true},
     "browser_action": {"default_popup": "popup.html", 
-                    "default_icon": {} },    
-    "icons": {}
+                    "default_icon": "images/logo.png" },    
+    "icons": {},
+    "permissions": [
+        "notifications", "alarms"
+    ],
+    "web_accessible_resources": []
 }
