--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "file:///Users/min/Desktop/SchoolBell/popup.html",
+            "url": "file://${file}",
             "webRoot": "${workspaceFolder}"
         }
     ]
